fix: fix some black dots